--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,17 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".SimpleChatActivity"
+            android:exported="true" />
+        <activity
             android:name=".ChatActivity"
-            android:exported="false" />
+            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".SignUpActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
