--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity
             android:name=".SignUpActivity"
             android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
+            android:windowSoftInputMode="adjustResize"
             android:exported="true" />
         <activity
             android:name=".LoginActivity"
