간챗 프래그먼트에 개인DB 카테고리 추가, 간챗DB 중복삽입 방지

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,11 @@
             android:exported="false" />
         <activity
             android:name=".BalanceGameActivity"
-            android:exported="true"></activity>
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize"
+            >
+
+        </activity>
         <activity
             android:name=".ProfileActivity"
             android:exported="false"
